--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  flutter_web_plugins:
+      sdk: flutter
   freezed: ^1.1.0
   json_serializable: ^6.1.3
 
